Adds the link to link

--- a/karuta/htm/list.htm
+++ b/karuta/htm/list.htm
@@ -123,6 +123,7 @@
 		<div id='wait-window' class='modal hide'>
 			<div id='info-window-body' class='modal-body' style='text-align:center'>
 				<div>Processing<br><img src="../../karuta/img/loading30.gif"/></div>
+				<div>Click here to make a link!</div>
 			</div>
 		</div>
 		<script>
